made website responsive

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
   <html>
     <head>
       <meta charset="UTF-8">
+      <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
       <link href='http://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
       <title> This is my title </title>
         <link rel="stylesheet" href="style2.css" >
+        <link rel="stylesheet" href="style2resp.css">
           <body>
 
             <div id="wrapper">
@@ -42,7 +44,7 @@
 
                   <div class="img-item">
                     <h2>Training</h2>
-                    <p> <a href="AboutUs.html">Maltipoos are sometimes challanging to train, so it's so important to start off as soon as you get your new puppy...<a href="training">Read More</a></p>
+                    <p>Maltipoos are sometimes challanging to train, so it's so important to start off as soon as you get your new puppy...<a href="training">Read More</a></p>
                   </div>
 
                   <div class="img-item">
